Display exercise completed

--- a/display-exercise.html
+++ b/display-exercise.html
@@ -16,7 +16,14 @@
   <link rel="stylesheet" type="text/css" href="styles/display-page.css">
 </head>
 <body>
-<!-- your HTML here to implement the colored box design -->
-	<p>Placeholder!</p>
+  <div class="top">
+    <span class="green half"></span>
+    <span class="blue half"></span>
+  </div>
+  <div class="bottom">
+    <span class="gray third"></span>
+    <span class="black third"></span>
+    <span class="orange third"></span>
+  </div>
 </body>
 </html>
