--- a/position-exercise.html
+++ b/position-exercise.html
@@ -28,7 +28,12 @@
   </nav>
 
   <main>
-    <!-- Put the HTML you need to accomplish the design -->
+    <div>
+      <span>
+        <img src="images/spacecat.png" class="cat">
+        <img src="images/spacedog.png" class="dog">
+      </span>
+    <div>
   </main>
 </body>
 </html>
